@@ -446,3 +446,4 @@ sessionCookie.domain=
 
 # Controls the poll period for collecting (some) internal metrics
 internal.monitor.pollPeriod=10000
+internal.monitor.diskUsage.pollPeriod=1200000
