@@ -1614,17 +1614,17 @@ systemSettings.enablePasswordExpiration=Enable password expiration
 systemSettings.passwordExpiration=Password expiration
 systemSettings.restartDelay=Restart delay (seconds)
 
-systemInfo.databaseTypeDesc=Get the type of main database being used
-systemInfo.diskInfoListDesc=Get information about disks on the server
-systemInfo.eventCountsDesc=Get the count of events 
-systemInfo.filedataCountDesc=Get the count of file data items
-systemInfo.filedataSizeDesc=Get the disk size of file data
-systemInfo.loadAverageDesc=Get the load average
-systemInfo.noSqlDatabaseSizeDesc=Get the disk size of the NoSQL database
-systemInfo.osInfoDesc=Get information about the operating system
-systemInfo.sqlDatabaseBackupListDesc=Get the list of available SQL backups
-systemInfo.databaseSizeDesc=Get the size of the SQL database
-systemInfo.timezoneDesc=Get the server's timezone description
+systemInfo.databaseTypeDesc=Database type
+systemInfo.diskInfoListDesc=Disk size information
+systemInfo.eventCountsDesc=Event count
+systemInfo.filedataCountDesc=File data count
+systemInfo.filedataSizeDesc=File data disk usage
+systemInfo.loadAverageDesc=Load average
+systemInfo.noSqlDatabaseSizeDesc=NoSQL disk usage
+systemInfo.osInfoDesc=Operating System
+systemInfo.sqlDatabaseBackupListDesc=List of available SQL backups
+systemInfo.databaseSizeDesc=SQL database size
+systemInfo.timezoneDesc=Server timezone
 
 header.virtualSerialPorts=Virtual serial ports
 emport.virtualserialport.prefix=Virtual Serial Port ''{0}'': {1}
@@ -2211,6 +2211,8 @@ internal.monitor.JSON_DATA_COUNT=JSON data entries
 internal.monitor.SERVER_THREADS=HTTP server threads
 internal.monitor.SERVER_IDLE_THREADS=HTTP server idle threads
 internal.monitor.SERVER_QUEUE_SIZE=HTTP server queue size
+internal.monitor.MA_HOME_SIZE=MA_HOME usage (bytes)
+internal.monitor.fileStoreSize={0} file store usage (bytes)
 
 java.monitor.JAVA_FREE_MEMORY=JVM free memory (MB)
 java.monitor.JAVA_USED_MEMORY=JVM used memory (MB)
