@@ -33,6 +33,9 @@
 * Upgrade Jackson databind to 2.9.10 for security purposes
 * Upgrade commons-beanutils to 1.9.4 for security purposes
 * Improve performance of System Settings listeners
+* Add internal metrics monitoring for load average when available
+* Add internal metrics monitoring for ma home
+* Add internal metrics monitoring for all file stores
 
 *Version 3.6.4*
 * Revert data source management permission to only allow creating new data sources, not give access to all data sources
